Corrected Accessibility on spacing

--- a/src/containers/Hero/hero.css
+++ b/src/containers/Hero/hero.css
@@ -69,30 +69,7 @@
                 justify-content: center;
                 align-items: center;
                 justify-content: space-between;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                gap: 20px;
             }
         }
 
